Fix spacing on chrome

--- a/baxter/themes/firefly/css/style.css
+++ b/baxter/themes/firefly/css/style.css
@@ -2135,7 +2135,7 @@ header[role=banner] {
     display: inline-block;
 }
 #search-container {
-    width: 23%;
+    width: 22%;
     margin-top: 6px;
 }
 
